# Numerical_Analysis

./: .gitignore  CMakeLists.txt
project/include/: HeatEquation.h  OrdinaryDE.h  PoissonEquation.h  WaveEquation.h  integralEquations.h
project/src/: HeatEquation.cpp  OrdinaryDE.cpp  PoissonEquation.cpp  WaveEquation.cpp  integralEquations.cpp  main.cpp
